--- a/inf3.css
+++ b/inf3.css
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>CSS Example</title>
-	<link rel="stylesheet" href="style.css">
+p {
+    color: red;
+}
+
+a {
+    color: blue;
+}
